    ZF-861 Outdated docblock - there is no more token
    ZF-874 Use Zend::isReadable() in Zend_View's path methods
    ZF-878 Logic error in Zend_Controller_Response_Abstract::canSendHeaders()
    ZF-909 Unit Tests fail (Zend/Service/AllTests.php)
    ZF-910 new _forward method does not set dispatched to false
    ZF-917 Zend_Controller Unit Tests failing
- Zend_Date
    ZF-721 RFC822 Dates are not localized or GMT, are rejected by setArpa()
    ZF-779 Adding a year in a leap year only adds 365 days
    ZF-784 Support using default date formats to create dates
    ZF-785 Incorrect date results from using Zend_Date::DATES
    ZF-790 camelCase for SunRise/SunSet
    ZF-795 Zend_Measure failed type extraction
    ZF-823 isTomorrow() and isYesterday() do not work as expected
    ZF-828 Extreme Date Values
    ZF-838 Basic Zend_Date construction per Manual fails
    ZF-863 testLoose(Zend_DateTest) failing
    ZF-886 DAY_SHORT, MONTH_SHORT - consistency problem
    ZF-899 new Zend_Date() fails to throw errors 
    ZF-912 Zend_Date Unit Tests failing
- Zend_Db
    Improved unit tests.
    ZF-31 PostgreSQL: implement describeTable() method
    ZF-36 Specify fetch mode for internal Zend_Db queries
    ZF-49 Zend_DB_Adapter_Abstract should has a function like checkConnection()
    ZF-147 Need getConnection() to create and return connection 
    ZF-189 Oracle: Zend_Db_Adapter_Oracle->listTables() has undefined variable
    ZF-192 Zend_Db_Adapter_Oracle->describeTable() bad sql request
    ZF-223 Zend_Db_Adapter_Pdo Bind problems
    ZF-279 Zend_Db_Statement::fetchColumn() fetches all rows 
    ZF-409 Zend_Db_Adapters should verify extensions are loaded 
    ZF-787 MS SQL Server: bug in Zend_Db_Adapter_Pdo_Mssql::limit()
    ZF-825 Zend_Db_Adapter_Pdo_Mysql not compatible with Zend_Db_Adapter_Abstract
    ZF-826 Doesn't work Zend_Db_Adapter_Pdo_Mysql::describeTable()
    ZF-831 MySQL describeTable still doesn't work correctly