@@ -234,4 +234,12 @@ class Zend_Db_Adapter_Pdo_PgsqlTest extends Zend_Db_Adapter_Pdo_Common
         }
     }
 
+    public function testTableRowSaveInsert()
+    {
+        list ($dbTable, $table, $id) = $this->getInstanceOfDbTable();
+
+        $this->markTestIncomplete('Need solution for Zend_Db_Table when inserting to PostgreSQL');
+        return;
+    }
+
 }
